--- a/Main.storyboard
+++ b/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -348,33 +347,62 @@
             </objects>
             <point key="canvasLocation" x="1445" y="-126"/>
         </scene>
-        <!--AUDL-->
-        <scene sceneID="c7o-tB-BnY">
+        <!--Item 2-->
+        <scene sceneID="mTR-fW-9nx">
             <objects>
-                <viewController id="JfY-h4-ngk" customClass="AUDLNowViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="22" sectionFooterHeight="22" id="B4Q-Xz-jse">
+                <viewController id="rAp-TL-ebT" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="eTm-v1-DIU"/>
+                        <viewControllerLayoutGuide type="bottom" id="7P6-xu-gGS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="hCC-Fc-nO2">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <connections>
-                            <outlet property="dataSource" destination="JfY-h4-ngk" id="U5R-gR-7FB"/>
-                            <outlet property="delegate" destination="JfY-h4-ngk" id="4DM-6A-NOb"/>
-                        </connections>
-                    </tableView>
-                    <toolbarItems/>
-                    <navigationItem key="navigationItem" title="AUDL" id="BEY-WL-kw7">
-                        <barButtonItem key="leftBarButtonItem" title="Menu" id="pXM-J7-gkl"/>
-                    </navigationItem>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
-                    <connections>
-                        <outlet property="sidebarButton" destination="pXM-J7-gkl" id="Qrl-98-He3"/>
-                        <outlet property="twitterTableView" destination="B4Q-Xz-jse" id="kaS-oN-L03"/>
-                    </connections>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="MTY-Iw-osC"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="o8p-ll-3Ju" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a0c-IN-OfH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="959" y="-1817"/>
+            <point key="canvasLocation" x="1302" y="-1413"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="GwU-OF-kR7">
+            <objects>
+                <viewController id="Lqz-Tl-0tS" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="aC3-dE-oG5"/>
+                        <viewControllerLayoutGuide type="bottom" id="J52-HF-7yT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="au9-1C-RZg">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="u3X-2y-cGF"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="S0t-9m-3sz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1302" y="-2043"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="6ti-dv-kDc">
+            <objects>
+                <tabBarController id="MZu-3I-6h3" sceneMemberID="viewController">
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="u0E-oU-Bwf">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Lqz-Tl-0tS" kind="relationship" relationship="viewControllers" id="8ef-KY-SMG"/>
+                        <segue destination="rAp-TL-ebT" kind="relationship" relationship="viewControllers" id="9YQ-RP-93u"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NZC-gr-Az8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="838" y="-1823"/>
         </scene>
         <!--Scores Table View Controller-->
         <scene sceneID="G7z-Rw-22n">
